# Ros2_pony

./: README.md
ros_pony-develop/: CAN_SETUP.md  Pony 12 motor pattern run.txt  README.md  can_device_diagnostics.md  csv_message_sender.py  debug_csv_compare.py  example_command.md  issue.md  joint_data_20250903_124645.csv  launch_joint_can_converter_fixed.launch.py  launch_joint_can_converter_simple.launch.py  requirements.txt  run_drive_usb2can.sh  run_drive_usb2can_tester.sh  run_motion_planner_integration_test.sh  run_tests.sh  send.py  send_system_status.py  test_directory_structure.md  test_instructions.md  test_motor_feedback_summary.py
ros_pony-develop/design/: design.md
ros_pony-develop/src/ros2_pony/: CMakeLists.txt  package.xml  setup.py
ros_pony-develop/src/ros2_pony/ros2_pony/: joint_can_converter_node.py  motion_planner_node.py  processor_node.py
ros_pony-develop/src/ros2_pony/ros2_pony/msg/: InitializationStatus.msg  JointNames.msg  MotorFeedback.msg  MotorFeedbackArray.msg  SystemStatus.msg
ros_pony-develop/src/ros2_pony/test/: can_device_checker.py  drive_usb2can_detailed_tester.py  test_can_send.py  test_joint_can_converter.py  test_motion_planner.py  test_processor_node.py
ros_pony-m/: CSV_MESSAGE_SENDER_README.md  README.md  TEST_FILES.md  can_frame_examples.md  cannode_wakeup.sh  csv_message_sender.py  example_command.md  kill_ros_node.sh  launch_can_test.launch.py  launch_joint_can_converter.launch.py  launch_motion_planner.launch.py  launch_motor_feedback_summary_test.launch.py  node_wakeup_tmp.sh  requirements.txt  run_can_device_checker.sh  run_drive_usb2can_detailed_tester.sh  run_motion_planner_test.sh  run_motor_feedback_test.sh  test_data1.csv  test_data2.csv  test_improved_can.sh  test_improved_can_enhanced.sh  test_improved_can_simple.sh  test_motor_feedback.py
ros_pony-m/src/ros2_pony/: CMakeLists.txt  setup.cfg
ros_pony-m/src/ros2_pony/ros2_pony/: drive_usb2can_node.py  joint_can_converter_node.py  motion_planner_node.py
ros_pony-m/src/ros2_pony/ros2_pony/msg/: AimDegree.msg
ros_pony-m/src/ros2_pony/test/: drive_usb2can_tester.py  test_processor_node_integration.py
